<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/btnStudent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_module"
            android:backgroundTint="#3B82F6"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="12dp" />

        <Button
            android:id="@+id/btnRoute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_module"
            android:backgroundTint="#3B82F6"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="12dp" />

        <Button
            android:id="@+id/btnAttendance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attendance_module"
            android:backgroundTint="#3B82F6"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="12dp" />

        <Button
            android:id="@+id/btnDriver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/driver_module"
            android:backgroundTint="#3B82F6"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="12dp" />

        <Button
            android:id="@+id/btnBus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bus_module"
            android:backgroundTint="#3B82F6"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="12dp" />

        <Button
            android:id="@+id/btnGuardian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardian_module"
            android:backgroundTint="#3B82F6"
            android:textColor="#FFFFFF" />



    </LinearLayout>
</ScrollView>
